# HarnessEngineering

./: .gitignore  README.md  pyproject.toml
docs/: prototype-design.md  reference.md
harness_engineering/: __init__.py  cli.py  manager.py  models.py
harness_engineering.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
harness_engineering/tests/: test_cli.py  test_manager.py  test_models.py
