[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-engineering"
version = "0.1.0"
description = "Wire harness design and management system"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["harness", "wiring", "engineering", "automotive", "aerospace"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
harness = "harness_engineering.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["harness_engineering/tests"]
